--- a/index.html
+++ b/index.html
@@ -18,10 +18,15 @@
             href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Nunito:wght@400;700;800&family=Roboto:wght@400;500;700&display=swap"
             rel="stylesheet"
         />
+        <script
+            src="https://kit.fontawesome.com/e5cf432e85.js"
+            crossorigin="anonymous"
+        ></script>
     </head>
     <body>
         <h1>Hello</h1>
         <h2>Portfolio-project</h2>
+        <i class="fa-brands fa-instagram"></i>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
