--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Nunito:wght@400;700;800&family=Roboto:wght@400;500;700&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
             rel="stylesheet"
         />
         <script
@@ -24,9 +24,14 @@
         ></script>
     </head>
     <body>
-        <h1>Hello</h1>
-        <h2>Portfolio-project</h2>
-        <i class="fa-brands fa-instagram"></i>
+        <div class="hero">
+            <p>Hi I am</p>
+            <h1>Yana Demchyshyn</h1>
+            <h2 class="mb-3">front-end developer based in Ukraine</h2>
+            <div>
+                <a href="#" class="btn btn-branding">Contact me</a>
+            </div>
+        </div>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
