--- a/index.html
+++ b/index.html
@@ -32,6 +32,86 @@
                 <a href="#" class="btn btn-branding">Contact me</a>
             </div>
         </div>
+        <p class="text-center m-5">
+            Featured Project which my best projects be choice to show
+        </p>
+        <div class="container">
+            <div class="row mb-5">
+                <div class="col d-none d-lg-block">
+                    <img
+                        src="images/yogurt.png"
+                        class="img-fluid"
+                        alt="yogurt-project"
+                    />
+                </div>
+                <div class="col">
+                    <div class="project-description">
+                        <h2 class="mb-5">Yogurt Project</h2>
+                        <p class="mb-4 text-muted">
+                            Far far away, behind the word mountains, far from
+                            the countries Vokalia and Consonantia, there live
+                            the blind texts. Separated they live in
+                            Bookmarksgrove right at the coast of the Semantics,
+                            a large language ocean. A small river named Duden
+                            flows by
+                        </p>
+                        <a href="#" class="btn btn-branding-outline"
+                            >View detail project</a
+                        >
+                    </div>
+                </div>
+            </div>
+            <div class="row mb-5">
+                <div class="col">
+                    <div class="project-description">
+                        <h2 class="mb-5">Weather App</h2>
+                        <p class="mb-4 text-muted">
+                            Far far away, behind the word mountains, far from
+                            the countries Vokalia and Consonantia, there live
+                            the blind texts. Separated they live in
+                            Bookmarksgrove right at the coast of the Semantics,
+                            a large language ocean. A small river named Duden
+                            flows by
+                        </p>
+                        <a href="#" class="btn btn-branding-outline"
+                            >View detail project</a
+                        >
+                    </div>
+                </div>
+                <div class="col d-none d-lg-block">
+                    <img
+                        src="images/weather.png"
+                        class="img-fluid"
+                        alt="weather-project"
+                    />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col d-none d-lg-block">
+                    <img
+                        src="images/dictionary.png"
+                        class="img-fluid"
+                        alt="dictionary-project"
+                    />
+                </div>
+                <div class="col">
+                    <div class="project-description">
+                        <h2 class="mb-5">Dictionary App</h2>
+                        <p class="mb-4 text-muted">
+                            Far far away, behind the word mountains, far from
+                            the countries Vokalia and Consonantia, there live
+                            the blind texts. Separated they live in
+                            Bookmarksgrove right at the coast of the Semantics,
+                            a large language ocean. A small river named Duden
+                            flows by
+                        </p>
+                        <a href="#" class="btn btn-branding-outline"
+                            >View detail project</a
+                        >
+                    </div>
+                </div>
+            </div>
+        </div>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
