add changes in style

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         <div class="hero">
             <p>Hi I am</p>
             <h1>Yana Demchyshyn</h1>
-            <h2 class="mb-3">front-end developer based in Ukraine</h2>
+            <h2 class="mb-5">front-end developer based in Ukraine</h2>
             <div>
                 <a href="#" class="btn btn-branding">Contact me</a>
             </div>
         </div>
-        <p class="text-center m-5">
+        <p class="top-part text-center m-5">
             Featured Project which my best projects be choice to show
         </p>
         <div class="container">
