--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="content">
-                        <h1 class="mb-4">Hi I'm Yana Demchyshyn</h1>
+                        <h1 class="mb-4">Hi, I'm Yana Demchyshyn</h1>
                         <h2 class="mb-4">
                             Front-end developer, based in Ukraine
                         </h2>
@@ -48,7 +48,7 @@
                     <img
                         src="images/photo.png"
                         alt="my-photo"
-                        class="img-fluid"
+                        class="img-fluid rounded"
                     />
                 </div>
             </div>
