--- a/index.html
+++ b/index.html
@@ -24,6 +24,28 @@
         ></script>
     </head>
     <body>
+        <div class="container">
+            <nav class="d-flex justify-content-between">
+                <a href="/">
+                    <img
+                        src="images/logo.png"
+                        alt="logo"
+                        class="logo d-none d-md-block"
+                    />
+                    <img
+                        src="images/small-logo.jpg"
+                        alt="logo"
+                        class="logo d-block d-md-none"
+                    />
+                </a>
+                <ul>
+                    <li class="active"><a href="/">Home</a></li>
+                    <li><a href="/about.html">About</a></li>
+                    <li><a href="/work.html">Work</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
         <div class="hero">
             <p>Hi I am</p>
             <h1>Yana Demchyshyn</h1>
