--- a/index.html
+++ b/index.html
@@ -133,6 +133,35 @@
                     </div>
                 </div>
             </div>
+            <footer>
+                <div
+                    class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+                >
+                    <div>
+                        <h4>Work Inquiry</h4>
+                        <p class="text-muted">Let's work together</p>
+                    </div>
+                    <div>
+                        <a href="" class="btn btn-branding mt-3">Contact me</a>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center mb-5">
+                    <a href="mailto:yana.demchyshyn@ukr.net" class="email-link"
+                        >yana.demchyshyn@ukr.net</a
+                    >
+                </div>
+                <div class="social-links d-flex justify-content-center">
+                    <a href="https://www.instagram.com" target="_blank"
+                        ><i class="fa-brands fa-instagram"></i
+                    ></a>
+                    <a href="https://www.github.com" target="_blank"
+                        ><i class="fa-brands fa-github"></i
+                    ></a>
+                    <a href="https://www.facebook.com" target="_blank"
+                        ><i class="fa-brands fa-facebook"></i
+                    ></a>
+                </div>
+            </footer>
         </div>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
