--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,11 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Portfolio-project</title>
+        <meta
+            name="description"
+            content="Yana Demchyshyn is a front-end developer,based in Kyiv, Ukraine"
+        />
+        <title>Contact-Front-end developer - Yana Demchyshyn</title>
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -24,6 +28,32 @@
         ></script>
     </head>
     <body>
+        <div class="container">
+            <nav class="d-flex justify-content-between">
+                <a href="/" title="homepage">
+                    <img
+                        src="images/logo.png"
+                        alt="Yana Demchyshyn logo"
+                        class="logo d-none d-md-block"
+                    />
+                    <img
+                        src="images/small-logo.jpg"
+                        alt="Yana Demchyshyn logo"
+                        class="logo d-block d-md-none"
+                    />
+                </a>
+                <ul>
+                    <li>
+                        <a href="/" title="homepage">Home</a>
+                    </li>
+                    <li><a href="/about.html" title="about page">About</a></li>
+                    <li><a href="/work.html" title="work page">Work</a></li>
+                    <li class="active">
+                        <a href="/contact.html" title="contact page">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
         <div class="content-container container">
             <div class="content text-center">
                 <h1 class="mb-5">Let's get in touch!</h1>
@@ -47,6 +77,49 @@
                 </p>
             </div>
         </div>
+        <footer class="container">
+            <div
+                class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+            >
+                <div>
+                    <h3>Work Inquiry</h3>
+                    <p class="text-muted">Let's work together</p>
+                </div>
+                <div>
+                    <a
+                        href="/contact.html"
+                        class="btn btn-branding mt-3"
+                        title="contact me"
+                        >Contact me</a
+                    >
+                </div>
+            </div>
+            <div class="d-flex justify-content-center mb-5">
+                <a href="mailto:yana.demchyshyn@ukr.net" class="email-link"
+                    >yana.demchyshyn@ukr.net</a
+                >
+            </div>
+            <div class="social-links d-flex justify-content-center">
+                <a
+                    href="https://www.instagram.com"
+                    target="_blank"
+                    title="instagram-profile"
+                    ><i class="fa-brands fa-instagram"></i
+                ></a>
+                <a
+                    href="https://www.github.com"
+                    target="_blank"
+                    title="github-profile"
+                    ><i class="fa-brands fa-github"></i
+                ></a>
+                <a
+                    href="https://www.facebook.com"
+                    target="_blank"
+                    title="facebook-profile"
+                    ><i class="fa-brands fa-facebook"></i
+                ></a>
+            </div>
+        </footer>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
