--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Portfolio-project</title>
+        <meta
+            name="description"
+            content="Yana Demchyshyn is a front-end developer,based in Kyiv, Ukraine"
+        />
+        <title>Front-end developer - Yana Demchyshyn</title>
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -26,23 +30,27 @@
     <body>
         <div class="container">
             <nav class="d-flex justify-content-between">
-                <a href="/">
+                <a href="/" title="homepage">
                     <img
                         src="images/logo.png"
-                        alt="logo"
+                        alt="Yana Demchyshyn logo"
                         class="logo d-none d-md-block"
                     />
                     <img
                         src="images/small-logo.jpg"
-                        alt="logo"
+                        alt="Yana Demchyshyn logo"
                         class="logo d-block d-md-none"
                     />
                 </a>
                 <ul>
-                    <li class="active"><a href="/">Home</a></li>
-                    <li><a href="/about.html">About</a></li>
-                    <li><a href="/work.html">Work</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
+                    <li class="active">
+                        <a href="/" title="homepage">Home</a>
+                    </li>
+                    <li><a href="/about.html" title="about page">About</a></li>
+                    <li><a href="/work.html" title="work page">Work</a></li>
+                    <li>
+                        <a href="/contact.html" title="contact page">Contact</a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -51,7 +59,12 @@
             <h1>Yana Demchyshyn</h1>
             <h2 class="mb-5">front-end developer based in Ukraine</h2>
             <div>
-                <a href="#" class="btn btn-branding">Contact me</a>
+                <a
+                    href="/contact.html"
+                    class="btn btn-branding"
+                    title="contact me"
+                    >Contact me</a
+                >
             </div>
         </div>
         <p class="top-part text-center m-5">
@@ -77,7 +90,7 @@
                             a large language ocean. A small river named Duden
                             flows by
                         </p>
-                        <a href="#" class="btn btn-branding-outline"
+                        <a href="/work.html" class="btn btn-branding-outline"
                             >View detail project</a
                         >
                     </div>
@@ -95,7 +108,7 @@
                             a large language ocean. A small river named Duden
                             flows by
                         </p>
-                        <a href="#" class="btn btn-branding-outline"
+                        <a href="work.html" class="btn btn-branding-outline"
                             >View detail project</a
                         >
                     </div>
@@ -127,22 +140,27 @@
                             a large language ocean. A small river named Duden
                             flows by
                         </p>
-                        <a href="#" class="btn btn-branding-outline"
+                        <a href="/work.html" class="btn btn-branding-outline"
                             >View detail project</a
                         >
                     </div>
                 </div>
             </div>
-            <footer>
+            <footer class="container">
                 <div
                     class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
                 >
                     <div>
-                        <h4>Work Inquiry</h4>
+                        <h3>Work Inquiry</h3>
                         <p class="text-muted">Let's work together</p>
                     </div>
                     <div>
-                        <a href="" class="btn btn-branding mt-3">Contact me</a>
+                        <a
+                            href="/contact.html"
+                            class="btn btn-branding mt-3"
+                            title="contact me"
+                            >Contact me</a
+                        >
                     </div>
                 </div>
                 <div class="d-flex justify-content-center mb-5">
@@ -151,13 +169,22 @@
                     >
                 </div>
                 <div class="social-links d-flex justify-content-center">
-                    <a href="https://www.instagram.com" target="_blank"
+                    <a
+                        href="https://www.instagram.com"
+                        target="_blank"
+                        title="instagram-profile"
                         ><i class="fa-brands fa-instagram"></i
                     ></a>
-                    <a href="https://www.github.com" target="_blank"
+                    <a
+                        href="https://www.github.com"
+                        target="_blank"
+                        title="github-profile"
                         ><i class="fa-brands fa-github"></i
                     ></a>
-                    <a href="https://www.facebook.com" target="_blank"
+                    <a
+                        href="https://www.facebook.com"
+                        target="_blank"
+                        title="facebook-profile"
                         ><i class="fa-brands fa-facebook"></i
                     ></a>
                 </div>
