--- a/about.html
+++ b/about.html
@@ -127,6 +127,15 @@
                     ><i class="fa-brands fa-facebook"></i
                 ></a>
             </div>
+            <p class="text-center mt-5">
+                This project was coded by Yana Demchyshyn, and it is
+                <a
+                    href="https://github.com/YanaDemchyshyn/portfolio-project"
+                    target="_blank"
+                    title="go to the github profile"
+                    >open source</a
+                >
+            </p>
         </footer>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
