--- a/index.html
+++ b/index.html
@@ -188,6 +188,15 @@
                         ><i class="fa-brands fa-facebook"></i
                     ></a>
                 </div>
+                <p class="text-center mt-5">
+                    This project was coded by Yana Demchyshyn, and it is
+                    <a
+                        href="https://github.com/YanaDemchyshyn/portfolio-project"
+                        target="_blank"
+                        title="go to the github profile"
+                        >open source</a
+                    >
+                </p>
             </footer>
         </div>
         <script
